syntax = "proto3";

package org.nexo.grpc.interaction;

option java_package = "org.nexo.grpc.interaction";
option java_outer_classname = "InteractionServiceOuterClass";

service InteractionService {
  rpc ExistLikeByIdAndUserId (IsLikeRequest) returns (IsLikeResponse);
  rpc ExistLikesByUserAndPostIds (BatchIsLikeRequest) returns (BatchIsLikeResponse);
  rpc ExistLikesByUserAndReelIds (BatchIsLikeRequest) returns (BatchIsLikeResponse);
  rpc GetTotalInteractions(Empty) returns (QuantityTotalInteract);
  rpc GetPercentInteractionsInThisMonth(Empty) returns (PercentInteract);
  rpc GetInteractionsByTime(DateRange) returns (GetUsersByTimeResponse);
  rpc GetUserInteractionsCount (GetUserInteractionsCountRequest) returns (GetUserInteractionsCountResponse);
}
message DateRange {
  string startDate = 1;
  string endDate = 2;
}

message UserCountByDate {
  string date = 1;
  int64 count = 2;
}

message GetUsersByTimeResponse {
  repeated UserCountByDate data = 1;
}
message Empty{}
message QuantityTotalInteract {
  int64 quantity = 1;
}
message PercentInteract {
  double percent = 1;
}
message IsLikeRequest {
  int64 postId = 1;
  int64  reelId = 2;
  int64  userId = 3;
}
message IsLikeResponse {
  bool isLike = 1;
}
message BatchIsLikeRequest {
  int64 userId = 1;
  repeated int64 postIds = 2;
}

message LikeResult {
  int64 postId = 1;
  bool isLike = 2;
}
message BatchIsLikeResponse {
  repeated LikeResult results = 1;
}

message GetUserInteractionsCountRequest {
  int64 userId = 1;
}

message GetUserInteractionsCountResponse {
  int64 interactionsCount = 1; // like + cmt
}

